clang/test/BSC/Negative/Generic/StructAndFunction/invalid_method_definition/generic_parameter_id_kw.cbs
// RUN: %clang_cc1 -verify %s

void test<T switch>() { }
// expected-error@-1 {{unknown type name 'T'}}
// expected-error@-2 {{expected identifier}}
// expected-error@-3 {{use of undeclared identifier 'T'}}
// expected-error@-4 {{expected identifier or '('}}